--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
     />
 
     <!-- Custom styles for this template -->
-    <link href=" css/about.css" rel="stylesheet" />
     <link href=" css/style.css" rel="stylesheet" />
+    <link href=" css/about.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
 
@@ -102,7 +102,13 @@
                     컨텐츠에 대한 수익을 창출할 수 있고, 광고주는 목표 그룹에게
                     정확하게 광고를 전달할 수 있습니다.
                   </p>
-                  <a href=""> Read More </a>
+                  <a
+                    class="btn btn-primary"
+                    data-toggle="modal"
+                    data-target="#aboutModal"
+                  >
+                    Read More
+                  </a>
                 </div>
               </div>
             </div>
@@ -150,6 +156,54 @@
           </video>
 
           <!-- ------------------------------------- -->
+        </div>
+
+        <!-- 모달 -->
+        <div
+          class="modal fade"
+          id="aboutModal"
+          tabindex="-1"
+          aria-labelledby="aboutModalLabel"
+          aria-hidden="true"
+          data-backdrop="static"
+        >
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="aboutModalLabel">광고 매칭</h5>
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p>
+                  우리 플랫폼은 크리에이터의 컨텐츠와 광고주의 요구를
+                  매칭시킵니다. 크리에이터는 자신의 컨텐츠와 관련된 광고를
+                  수신할 수 있으며, 광고주는 해당 크리에이터의 컨텐츠와 관련된
+                  광고를 게재할 수 있습니다. 이를 통해 크리에이터는 자체
+                  컨텐츠에 대한 수익을 창출할 수 있고, 광고주는 목표 그룹에게
+                  정확하게 광고를 전달할 수 있습니다.
+                </p>
+              </div>
+              <div class="modal-footer">
+                <!-- <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">
+              Save changes
+            </button> -->
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
